--- a/templates/info.tmpl
+++ b/templates/info.tmpl
@@ -4,7 +4,9 @@
 	<h1>SDE information</h1>
 	<p>The currently loaded SDE has {{$.SDECount}} types</p>
 	<p>The version is {{$.SDEVersion}}</p>
-	{{if $.SDEOffical}}{{else}}
+	{{if $.SDEOffical}}
+	<p>The loaded version is official</p>
+	{{else}}
 	<p>The loaded version is NOT official</p>
 	{{end}}
 {{end}}
