--- a/templates/index.tmpl
+++ b/templates/index.tmpl
@@ -1,5 +1,8 @@
 {{template "base" .}}
 {{define "title"}}Index{{end}}
 {{define "content"}}
-	Hello 
+	<div class="uk-container uk-container-center">
+	<h1>SDE Search</h1>
+	<p>Use the search bar in the top right corner to look for type information</p>
+	</div>
 {{end}}
