--- a/templates/base.tmpl
+++ b/templates/base.tmpl
@@ -29,6 +29,8 @@
   		</div>
   	</div>
   	{{template "content" .}}
+    <div class="uk-panel uk-panel-box sde-footer">SDE Search version <a href="https://github.com/THUNDERGROOVE/sde-search/commit/{{.Version}}">{{.Version}}</a>@{{.Branch}}</div>
+    </body>
   </body>
 </html>
 {{end}}
