Testing deploy again

--- a/public/css/sde-search.css
+++ b/public/css/sde-search.css
@@ -1,4 +1,6 @@
-/* Floating footer.  Probably shits the bed hard.*/
+/*
+	Floating footer.  Probably shits the bed hard.
+*/
 .sde-footer {
    position:absolute;
    bottom:0;
