--- a/public/css/sde-search.css
+++ b/public/css/sde-search.css
@@ -2,7 +2,7 @@
 	Floating footer.  Probably shits the bed hard.
 */
 .sde-footer {
-   position:absolute;
+   position:fixed;
    bottom:0;
    width: 95%;
    height:10px;   /* Height of the footer */
