Possible fix for scaling issue on mobile devices

--- a/templates/base.tmpl
+++ b/templates/base.tmpl
@@ -4,6 +4,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="author" content="Nick Powell">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     {{template "meta" .}}
     <title>SDE Search | {{template "title" .}}</title>
     <link rel="stylesheet" type="text/css" href="/public/css/uikit.almost-flat.min.css">
