--- a/templates/base.tmpl
+++ b/templates/base.tmpl
@@ -17,34 +17,36 @@
   </head>
   <body>
   	<div class="navbar navbar-inverse navbar-fixed-top">
-      <div class="navbar-header">
-        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-          <span class="sr-only">Toggle navigation</span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
-        <a class="navbar-brand" href="/">SDE Search</a>
-      </div>
-      <div class="navbar-text">
-      {{if .Devel}}
-        <form action="/dev/reload"><button><span class="glyphicon glyphicon-refresh" aria-hidden="true"></span></button></form>
-        {{/*
-          @TODO: Low priority
-          Make use JS to GET isntead of viewing the page with their browser
-          Alternatively, use a redirect to put them at the page they came from. Better idea
-        */}}
-      {{end}}
-      </div>
-      <div id="navbar" class="navbar-collapse collapse">
-        <form class="navbar-form navbar-right" action="/search" method="POST">
-          <div class="form-group">
-            <input name="search" class="form-control" placeholder="search">
-            <button class="btn btn-primary">Submit</button>
-          </div>
-        </form>
-      </div><!--/.navbar-collapse -->
-  	 </div>
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="/">SDE Search</a>
+        </div>
+        <div class="navbar-text">
+        {{if .Devel}}
+          <form action="/dev/reload"><button><span class="glyphicon glyphicon-refresh" aria-hidden="true"></span></button></form>
+          {{/*
+            @TODO: Low priority
+            Make use JS to GET isntead of viewing the page with their browser
+            Alternatively, use a redirect to put them at the page they came from. Better idea
+          */}}
+        {{end}}
+        </div>
+        <div id="navbar" class="navbar-collapse collapse">
+          <form class="navbar-form navbar-right" action="/search" method="POST">
+            <div class="form-group">
+              <input name="search" class="form-control" placeholder="search">
+              <button class="btn btn-primary">Submit</button>
+            </div>
+          </form>
+        </div><!--/.navbar-collapse -->
+  	   </div>
+     </div>
   	{{template "content" .}}
     <div class="panel panel-primary sde-footer"><div class="panel-heading"><div class="panel-title">SDE Search version <a class="text-success" href="https://github.com/THUNDERGROOVE/sde-search/commit/{{.Version}}">{{.Version}}</a>@{{.Branch}}</div></div></div>
     </body>
