Try responsive tables

--- a/templates/type.tmpl
+++ b/templates/type.tmpl
@@ -13,7 +13,7 @@
 			{{end}}
 			<hr>
 			<h1>Attributes</h1>
-			<table class="table">
+			<table class="table-responsive">
 				<thead>
 					<th>Attribute Name</td>
 					<th>Attribute Value</td>
