--- a/templates/index.tmpl
+++ b/templates/index.tmpl
@@ -1,7 +1,16 @@
 {{template "base" .}}
 {{define "title"}}Index{{end}}
 {{define "content"}}
+
 	<div class="container">
+	<div class="alert alert-danger alert-dismissible" role="alert">
+	<button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+	<strong>Recent changes!</strong><br>We recently added Display Attributes so you can more easily find the information you're looking for.<br>
+		The system has a lot of quirks internally so things may not display all of the Display Attributes you're looking for.  Most notibly on the flaylock and swarm launcher.
+		These issues will be sorted out as soon as I can get around to it.<br>
+		Thanks.
+	</div>
+
 		<h1>SDE Search</h1>
 		<p>Use the search bar in the top right corner to look for type information</p>
 	</div>
