--- a/templates/base.tmpl
+++ b/templates/base.tmpl
@@ -14,6 +14,7 @@
 
     <script type="text/javascript" src="/public/js/jquery.min.js"></script>
     <script src="/public/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="/public/js/sde-search.js"></script>
   </head>
   <body>
   	<div class="navbar navbar-inverse navbar-fixed-top">
@@ -26,6 +27,9 @@
             <span class="icon-bar"></span>
           </button>
           <a class="navbar-brand" href="/">SDE Search</a>
+          <ul class="nav navbar-nav navbar-right">
+          <li><a href="/store">Store</a></li>
+          </ul>
         </div>
         <div class="navbar-text">
         {{if .Devel}}
@@ -48,8 +52,13 @@
   	   </div>
      </div>
   	{{template "content" .}}
-    <div class="panel panel-primary sde-footer"><div class="panel-heading"><div class="panel-title">SDE Search version <a class="text-success" href="https://github.com/THUNDERGROOVE/sde-search/commit/{{.Version}}">{{.Version}}</a>@{{.Branch}}</div></div></div>
-    </body>
+    <div class="panel panel-primary sde-footer">
+      <div class="panel-heading">
+        <div class="panel-title">
+          SDE Search version <a class="text-success" href="https://github.com/THUNDERGROOVE/sde-search/commit/{{.Version}}">{{.Version}}</a>@{{.Branch}}
+        </div>
+      </div>
+    </div>
   </body>
 </html>
 {{end}}
